[tool.poetry]
name = "filecoinpy"
version = "0.1.0"
description = "A few utils and helpers to sign a filecoin message"
license = "MIT"
authors = ["FLiotta <liottafabrizio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
secp256k1 = "^0.14.0"
leb128 = "^1.0.4"
cbor2 = "^5.4.2"

[tool.poetry.dev-dependencies]
bip-utils = "^2.3.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
